--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -636,6 +636,16 @@ footer {
     }
 }
 
+@media screen and (min-width:1200px) {
+    .preguntas {
+        hr {
+            width: 15vw;
+        }
+    }
+}
+
+
+
 .forma {
     background-image: url("../img-museo/vista-muro-chan-chan.jpg");
     background-color: #191919;
