--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -1,654 +1,14 @@
-body {
-    font-family: 'Roboto', sans-serif;
-}
-
-header {
-    background-color: black;
-    box-shadow: -1px 5px 16px -3px rgba(0,0,0,0.72);
-    a {
-        margin: 16px;
-    }
-    .active {
-        font-weight: bold;
-    }
-    .contacto {
-        background-color: rgb(115, 34, 34);
-        border-radius: 5px;
-    }
-}
-
-@media screen and (min-width:1200px) {
-    header {
-        background-color: #fff;
-        a {
-            color: black !important;
-            text-align: center;
-        }
-
-        li {
-            a:hover {
-                background-color: #e9c7c7;
-                border-radius: 5px
-                }
-            .contacto:hover {
-                background-color: rgb(204, 147, 77);
-            } 
-        }
-        
-            
-        img {
-            filter: invert(100%);
-            }
-        }
-    }
-
-
-.shero {
-    height: 90vh;
-    background-image: url("../img-museo/img-hero-mobile.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    color: #fff;
-    text-align: center;
-    padding-bottom: 60px;
-    .hero {
-        display: flex;
-    }
-    h1{
-        font-weight: bolder;
-    }
-    p {
-        font-weight: lighter;
-    }
-}
-
-@media screen and (min-width:1200px) {
-    .shero {
-        background-image: url("../img-museo/img-hero-section.png");
-        text-align: start;
-        font-size: 1.5rem;
-    }
-}
-
-
-.maincultural { 
-    height: auto; 
-    background-color: #fff;
-        .contenido {
-            h2 {
-                font-weight: bolder;
-                color: darkred;
-            }
-            hr {
-                width: 30vw;
-                border: 3px solid darkred;
-            }
-            h5 {
-                font-weight: bold;
-                font-size: 1.5rem;
-                text-align: center;
-            }
-            p {
-                text-align: justify;
-            }
-            button {
-                color: darkred;
-                text-decoration: none;
-                font-weight: bold;
-                font-size: 1.2rem;
-                i {
-                    font-weight: bolder;
-                    margin-left: 12px;
-                }
-            }
-        }
-    }
-
-@media screen and (min-width:1200px) {
-    .maincultural {
-        .contenido {
-            hr {
-                width: 15vw;
-            }
-            .px-xl-4 {
-                margin-top: 60px;
-                margin-bottom: 60px;
-                h5 {
-                    margin-bottom: 24px;
-                }
-            }
-
-        }
-    }
-}
-
-.mainhistoria {
-    height: auto;
-    background-image: url("../img-museo/img-paisaje-chan-chan.png");
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    color: #fff;
-    .contenido {
-        h2 {
-            font-weight: bold;
-            color: #fff;
-        }
-        .titulo {
-            hr {
-                width: 30vw;
-                border: 3px solid #fff;
-            }
-        }
-        img {
-            height: 400px;
-            object-fit: cover;
-        }
-        .hbloque1__texto {
-            text-align: justify;
-            h4 {
-                margin-bottom: 24px;
-            }
-            p {
-                font-weight: lighter;
-                font-size: 1.1rem;
-            }
-        }
-
-        .hbloque2 {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            margin-bottom: 24px; ;
-            hr {
-                width: 50vw;
-            }
-            h5 {
-                font-weight: bold;
-                font-size: 1.3rem;
-                line-height: 1.8;
-            }
-            p {
-                font-size: 1.1rem;
-            }
-        }
-
-        .shblock3 {
-            text-align: justify;
-            h4 {
-                margin-bottom: 24px;
-            }
-            p {
-                font-weight: lighter;
-                font-size: 1.1rem;
-            }
-        }
-    }
-}
-
-@media screen and (min-width:1200px) {
-    .mainhistoria {
-        .contenido {
-            .titulo {
-                hr {
-                    width: 10vw;
-                }
-            }
-            .hbloque1__texto {
-                h4 {
-                    line-height: 1.5;
-                    padding: 0px 64px;
-                }
-                p {
-                    padding: 0px 64px;
-                    font-size: 1rem;
-                }
-            }
-    
-            .hbloque2 {
-                margin-bottom: 30px; ;
-                hr {
-                    width: 30vw;
-                }
-                h5 {
-                    font-size: 1.5rem;
-                }
-                p {
-                    font-size: 1rem;
-                }
-            }
-    
-            .shblock3 {
-                h4 {
-                    margin-right: 60px;
-                }
-                p {
-                    margin-right: 60px;
-                    font-size: 1rem;
-                }
-            }
-        }
-    }
-}
-
-
-.maininfog {
-    background-color: rgb(21, 21, 21);
-    .contenido {
-        .titulo {
-            h2 {
-                font-weight: bold;
-                color: #fff;
-            }
-            hr {
-                width: 30vw;
-                border: 3px solid #fff;
-            }
-            
-        }
-    }
-    h5 {
-    font-weight: bold;
-    font-size: 1.1rem;
-    text-align: center;
-    }
-    p {
-        text-align: justify;
-    }
-    span {
-        background-color: rgba(0, 0, 0, 0.464);
-    }
-}
-
-@media screen and (min-width:1200px) {
-    .maininfog {
-        h5 {
-            font-size: 1.3rem;
-            margin: 24px 0px;
-        }
-        
-    }
-}
-
-.mainexhib {
-    background-color: rgb(150, 40, 40);
-    color: #fff;
-    .contenido {
-        .titulo {
-            h2 {
-                font-weight: bold;
-                color: #fff;
-            }
-            hr {
-                width: 30vw;
-                border: 3px solid #fff;
-            }
-            
-        }
-    }
-    h5 {
-        font-weight: bold;
-        font-size: 1.1rem;
-        text-align: center;
-    }
-    p {
-        font-weight: lighter;
-        text-align: justify;
-    }
-    span {
-        background-color: rgba(21, 16, 16, 0.464);
-    }
-    button {
-        color: #fff;
-        text-decoration: none;
-        font-weight: bold;
-        font-size: 1.2rem;
-        i {
-            font-weight: bolder;
-            margin-left: 12px;
-        }
-    }
-    .card {
-        background-color: black;
-    }
-}
-
-@media screen and (min-width:1200px) {
-    .mainexhib {
-        img {
-            filter: brightness(60%);
-        }
-        
-    }
-}
-
-footer {
-    background-color:rgb(8, 8, 8);
-    color: #fff;
-    text-align: center;
-    .blinks {
-        background-color: rgb(8, 8, 8);
-        padding: 32px 0px;
-    }
-    a {
-        text-decoration: none ;
-        color: #fff;
-        padding: 24px;
-        border-bottom: 0.05px solid rgba(255, 255, 255, 0.051);
-        border-top: 0.05px solid rgba(255, 255, 255, 0.051);
-        
-    }
-    i {
-        font-size: 1.6rem;
-        margin: 24px;
-    }
-    p {
-        font-weight: lighter;
-        font-size: 1.1rem;
-    }
-    article {
-        padding: 16px 0px;
-    }
-    .lfcontacto {
-        background-color: rgb(90, 13, 13);
-        border-radius: 15px;
-        width: 60vw;
-        padding: 10px;
-        margin-top: 24px;
-    }
-}
-
-@media screen and (min-width:1200px) {
-    footer {
-        .lfcontacto {
-            width: auto;
-            height: 60px;
-            padding: 16px;
-            margin-top: 0px;
-        }
-        .blinks {
-            display: flex;
-            align-items: center;
-        }
-        a {
-        border: none;
-        }
-        a:hover {
-            color: rgb(151, 66, 66);
-            background-color: rgb(12, 12, 12);
-            border-radius: 15px;
-            padding: 16px;
-        }
-        
-}
-}
-
-// ---------------
-
-.ubicacion {
-    background-color: rgb(150, 40, 40);
-    color: #fff;
-    .stu-titulo {
-        h2 {
-            font-weight: bold;
-            color: #fff;
-        }
-        hr {
-            width: 30vw;
-            border: 3px solid #fff;
-        }    
-    }
-    iframe {
-        height: 55vh;
-        filter: grayscale(1%) invert(95%) sepia(30%);
-    }
-    .block2 {
-    text-align: center;
-    font-size: 1.2rem;
-    tbody {
-        font-weight: lighter;
-    }
-    }
-
-}
-
-@media screen and (min-width:1200px) {
-    .ubicacion {
-        .stu-titulo {
-            hr {
-                width: 15vw;
-            }
-        }
-        
-}
-}
-
-.tarifas {
-    h2 {
-        font-weight: bolder;
-        color: darkred;
-    }
-    hr {
-        width: 30vw;
-        border: 3px solid darkred;
-        text-align: center;
-    }
-    
-    .tarifas__tabla1 {
-        text-align: center;
-        margin-bottom: 32px;
-        thead {
-            .tabla1_categ {
-                background-color: rgb(70, 16, 16);
-                color: #FFFFFF;
-                font-size: 1.3rem;
-                border-radius: 8px;
-                padding: 12px 32px;
-            }
-            .tabla1_subcateg {
-                font-size: 1.3rem;
-            }
-            
-        }
-        tbody {
-            font-size: 1.2rem;
-            tr{
-                border-bottom: 1px solid rgb(20, 20, 20);
-            }
-        }
-    }
-
-    .tarifas__tabla2 {
-        text-align: center;
-        margin-bottom: 32px;
-        thead {
-            .tabla1_categ {
-                background-color: #C89466;
-                color: #FFFFFF;
-                font-size: 1.3rem;
-                border-radius: 8px;
-                padding: 12px 32px;
-            }
-            .tabla1_subcateg {
-                font-size: 1.3rem;
-            }
-            
-        }
-        tbody {
-            font-size: 1.2rem;
-            tr{
-                border-bottom: 1px solid rgb(20, 20, 20);
-            }
-        }
-    }
-
-    .tarifas__tabla3 {
-        text-align: center;
-        margin-bottom: 32px;
-        thead {
-            .tabla1_categ {
-                background-color: rgb(29, 60, 39);
-                color: #FFFFFF;
-                font-size: 1.3rem;
-                border-radius: 8px;
-                padding: 12px 32px;
-            }
-            .tabla1_subcateg {
-                font-size: 1.3rem;
-            }
-            
-        }
-        tbody {
-            font-size: 1.2rem;
-            tr{
-                border-bottom: 1px solid rgb(20, 20, 20);
-            }
-        }
-    }
-}
-
-@media screen and (min-width:1200px) {
-    .tarifas {
-        hr {
-            width: 10vw;
-        }
-        .tarifas__tabla1 {
-            width: 30vw;
-        }
-        .tarifas__tabla2 {
-            width: 30vw;
-        }
-        .tarifas__tabla3 {
-            width: 30vw;
-        }
-    }
-}
-
-.opiniones {
-    background-color: #2A2828;
-    h2 {
-        font-weight: bold;
-        color: #fff;
-    }
-    hr {
-        width: 30vw;
-        border: 3px solid #fff;
-    }
-    .opiniones_card {
-        background-color: #fff;
-        margin-bottom: 42px;
-        padding: 32px;
-        p {
-            text-align: justify;
-        }
-        .stars {
-            color: rgb(255, 166, 0);
-            text-align: center;
-            font-size: 1.3rem;
-            margin: 16px;
-        }
-        h3 {
-            font-weight: bold;
-            text-align: center;
-        }
-    }
-
-}
-
-@media screen and (min-width:1200px) {
-    .opiniones{
-        hr {
-            width: 15vw;
-        }
-        .opiniones_card {
-            width: 30vw;
-        }
-    }
-}
-
-.talleres {
-    background-color: rgb(150, 40, 40);
-    h2 {
-        font-weight: bold;
-        color: #fff;
-    }
-    hr {
-        width: 30vw;
-        border: 3px solid #fff;
-    }
-    h6 {
-        font-weight: bold;
-        color: rgb(140, 42, 42);
-    }
-    span {
-        background-color: #2a282835;
-    }
-}
-
-@media screen and (min-width:1200px) {
-    .talleres {
-        hr {
-            width: 15vw;
-            border: 3px solid #fff;
-        }
-    }
-}
-
-.galería {
-    h2 {
-        font-weight: bolder;
-        color: darkred;
-    }
-    hr {
-        width: 30vw;
-        border: 3px solid darkred;
-        text-align: center;
-    }
-
-    a {
-        color: #2A2828;
-        text-align: center;
-    }
-    .active {
-        background-color: #C89466 !important;
-    }
-}
-
-@media screen and (min-width:1200px) {
-    .galería {
-        hr {
-            width: 10vw;
-        }
-    }
-}
-
-.preguntas {
-    h2 {
-        font-weight: bolder;
-        color: darkred;
-    }
-    hr {
-        width: 35vw;
-        border: 3px solid darkred;
-        text-align: center;
-    }
-}
-
-.forma {
-    background-image: url("../img-museo/vista-muro-chan-chan.jpg");
-    background-color: #191919;
-    background-blend-mode: overlay;
-    background-size: cover;
-    color: #fff;
-    font-weight: lighter;
-    text-align: center;
-    .btn-primary {
-        background-color: rgb(105, 35, 35);
-        border: none;
-    }
-    .form-check-input {
-        background-color: rgb(105, 35, 35);
-    }
-}
+@import "base/mixin";
+@import "base/reset";
+@import "base/variables";
+@import "pages/actividades";
+@import "pages/contacto";
+@import "pages/faq";
+@import "pages/museo";
+@import "pages/tours";
+@import "partials/botones";
+@import "partials/cards";
+@import "partials/footer";
+@import "partials/forms";
+@import "partials/header";
+@import "partials/hero";
